pci-dss/workload/network-ingress/pci-policy-1.2.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: firewall policy
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
             {}
      toPorts:
        - ports:
            - port: "443"
              protocol: any
        - ports:
            - port: "80"
              protocol: any
  egress:
    - toEndpoints:
        - matchLabels:
              {}
      toPorts:
        - ports:
            - port: "443"
              protocol: any
        - ports:
            - port: "80"
              protocol: any
